--- a/mongodb-replicaset/init-replicaset.org
+++ b/mongodb-replicaset/init-replicaset.org
@@ -2,7 +2,12 @@
 ** 注意
 - 只有primary节点需要创建用户,其他数据节点不能写入任何数据,否则初始化失败
 - 节点之间需要使用keyFile方式进行验证
-- 
+-
+
+** 生成keyfile
+#+BEGIN_SRC shell
+openssl rand -base64 120 > keyfile.key
+#+END_SRC
 
 ** 在primary节点执行初始化脚本(创建了用户的那个)
 #+BEGIN_SRC javascript
@@ -17,3 +22,4 @@ var config = {
 };
 rs.initiate(config);
 #+END_SRC
+
